--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,146 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --foreground-rgb: 12, 12, 12;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  background: rgb(var(--foreground-rgb));
+}
+
+.heroBg {
+  position: fixed;
+  z-index: -1;
+  top: -50%;
+  left: -50%;
+  right: -50%;
+  bottom: -50%;
+  width: 200%;
+  height: 200vh;
+  background: transparent
+    url("http://assets.iceable.com/img/noise-transparent.png") repeat 0 0;
+  background-repeat: repeat;
+  animation: bg-animation 0.2s infinite;
+  opacity: 0.9;
+  visibility: visible;
+}
+
+@keyframes bg-animation {
+  0% {
+    transform: translate(0, 0);
+  }
+  10% {
+    transform: translate(-5%, -5%);
+  }
+  20% {
+    transform: translate(-10%, 5%);
+  }
+  30% {
+    transform: translate(5%, -10%);
+  }
+  40% {
+    transform: translate(-5%, 15%);
+  }
+  50% {
+    transform: translate(-10%, 5%);
+  }
+  60% {
+    transform: translate(15%, 0);
+  }
+  70% {
+    transform: translate(0, 10%);
+  }
+  80% {
+    transform: translate(-15%, 0);
+  }
+  90% {
+    transform: translate(10%, 5%);
+  }
+  100% {
+    transform: translate(5%, 0);
+  }
+}
+
+.divContainer {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 350px;
+  width: auto;
+  background-color: rgb(250 204 21);
+  border-radius: 40px 0px 0px 0px;
+  overflow: hidden;
+}
+
+.divContainer .divImg {
+  width: 200px; /* Ancho del heptágono */
+  height: 200px; /* Altura del heptágono */
+
+  /* Resto del estilo */
+  border: 2px solid black;
+  background-color: #333;
+  margin: 12px;
+  z-index: 1;
+  position: absolute;
+  top: 0; /* Posición arriba del todo */
+
+  /* Clip-path para crear la forma de un heptágono */
+  clip-path: polygon(
+    50% 0%,
+    87% 15%,
+    100% 59%,
+    75% 100%,
+    25% 100%,
+    0% 59%,
+    13% 15%
+  );
+}
+
+.divContainer .divImg img {
+  width: 200px; /* Ancho del heptágono */
+  height: 200px; /* Altura del heptágono */
+  object-fit: cover; /* Ajusta la imagen dentro del heptágono */
+  clip-path: polygon(
+    50% 0%,
+    87% 15%,
+    100% 59%,
+    75% 100%,
+    25% 100%,
+    0% 59%,
+    13% 15%
+  );
+  z-index: 1000;
+}
+
+.divContainer .name {
+  font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  z-index: 1;
+  color: white;
+  margin-top: 200px;
+}
+
+.divData {
+  width: 100%;
+  height: calc(100% - 150px);
+  position: absolute;
+  bottom: 0;
+  z-index: 0;
+  background-color: black;
+  border-radius: 35px 0px 0px 0px;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.animate-fade-in {
+  animation: fadeIn 1s ease-in-out;
 }
